--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4 mb-4">
             <div class="card">
-              <img class="card-img-top" src="assets/images/perfil.jpg" alt="Foto de Perfil">
+              <img class="card-img-top" src="assets/images/PerfilMediano.jpg" alt="Foto de Perfil">
               <div class="card-body">
                 <div class="badges">
                   <span class="badge badge-warning">Desarrollador Java</span>
