Se elimino la seccion de Perfil

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#perfil">Perfil</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#requerimientos">Requerimientos</a>
             </li>
             <li class="nav-item">
@@ -44,52 +41,11 @@
     </nav>
     <!-- /Header -->
 
-    <!-- Perfil -->
-    <section id="perfil" class="mt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4 mb-4">
-            <div class="card">
-              <img class="card-img-top" src="assets/images/PerfilMediano.jpg" alt="Foto de Perfil">
-              <div class="card-body">
-                <div class="badges">
-                  <span class="badge badge-warning">Desarrollador Java</span>
-                </div>
-                <h5 class="card-title">Pablo Tachella</h5>
-                <h6>Edad: 25 años.</h6>
-                <h6>Nacionalidad: Argentina</h6>
-                <h6>Tel: 1122674560</h6>
-                <h6>Email: pablotachella95@gmail.com</h6>
-                <h6>LinkedIn: Pablo Tachella</h6>
-               
-              </div>
-            </div>
-          </div>
-            <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-8 mb-4">
-              <h2>Formación académica y conocimientos</h2>
-              <h6 class="mb-0 mt-4 text-muted">2020 (En curso)</h6>
-              <h5 class="mt-0">-Hibernate y Java Spring - Testing con JUnit</h5>
-              <h6 class="">Estructuración de apps con Spring Boot, Spring Data JPA y Spring Security.</h6>
-              <h6 class="">Test-Driven Development, Test de integración con DB, Test a partir de Requerimientos.</h6>
-              <h6 class="mb-0 mt-4 text-muted">2019-2020</h6>
-              <h5 class="mt-0">-JavaScript – HTML/HTML5 - CSS/CSS3 Responsive</h5>
-              <h6 class="">Sitios web interactivos, MySQL, Responsive Design.</h6>
-              <h6 class="mb-0 mt-4 text-muted">2018-2020</h6>
-              <h5 class="mt-0">-Java</h5>
-              <h6 class="">Gradle, POO, Paradigma funcional, Persistencia de datos (MySQL, consumo de APIs rest), Dessarrollo de programas de escritorio, Programación modular con interfaces, Diseño de interfaces.</h6>
-              <h6 class="mb-0 mt-4 text-muted">2018-2019</h6>
-              <h5 class="mt-0">-Android Studio (Java & Kotlin)</h5>
-              <h6 class="">Diseño de interfaces, Arquitectura MVP, Base de Datos SQLite, Firebase</h6>
-            </div>  
-      </div>
-    </section>
-    <!-- /Perfil -->
-
     <!-- Requerimientos -->
     <section id="requerimientos" class="pt-4 pb-4">
       <div class="container">
         <div>
-          <h2>Último proyecto: Sistema Salsarte (Privado)</h2>
+          <h2>Sistema Salsarte (Privado)</h2>
         </div>
         <div class="row pt-4">
           <h4>Análisis de Requerimientos</h4>
